using Devise for authentication

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,16 @@
 	  <li><a href="#">About</a></li>
 	  <li><a href="#">Contact</a></li>
 	</ul>
+        <div style="clear: both;"></div>
+
+        <div id="user-links">
+          <% if user_signed_in? %>
+            Signed in as <%= current_user.email %>. Not you?
+            <%= link_to "Sign out", destroy_user_session_path %>
+          <% else %>
+            <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
+          <% end %>
+        </div>
       </div>
       <!-- end div#menu -->
     </div>
@@ -29,6 +39,10 @@
     <div id="page">
       <div id="page-bgtop">
 	<div id="content">
+          <% flash.each do |name, msg| %>
+            <p class="<%= name %>"><%= h(msg) %></p>
+          <% end %>
+
           <%= yield %>
 	</div>
 	<!-- end div#content -->
