--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Ecigs</title>
+  <title>Ecigs - <%= h(yield(:title) || "your place to buy e-cigarettes") %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
@@ -42,6 +42,11 @@
           <% flash.each do |name, msg| %>
             <p class="<%= name %>"><%= h(msg) %></p>
           <% end %>
+
+          <% title = yield(:title) %>
+          <% if title %>
+            <h2><%= h(title) %></h2>
+            <% end %>
 
           <%= yield %>
 	</div>
