--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,26 +1,24 @@
 	<div id="sidebar">
 	  <ul>
-	    <li id="search">
-	      <h2>Search</h2>
+	    <!-- <li id="search">
+	     <h2>Search</h2>
 	      <form method="get" action="">
 		<fieldset>
 		  <input type="text" id="seach-text" name="s" value="" />
 		  <input type="submit" id="search-submit" value="Search" />
 		</fieldset>
 	      </form>
-	    </li>
-	    <li>
-	      <h2>Lorem Ipsum</h2>
-	      <ul>
-		<li><a href="#">Fusce dui neque fringilla</a></li>
-		<li><a href="#">Eget tempor eget nonummy</a></li>
-		<li><a href="#">Magna lacus bibendum mauris</a></li>
-		<li><a href="#">Nec metus sed donec</a></li>
-		<li><a href="#">Magna lacus bibendum mauris</a></li>
-		<li><a href="#">Velit semper nisi molestie</a></li>
-		<li><a href="#">Eget tempor eget nonummy</a></li>
-	      </ul>
-	    </li>
+	    </li> -->
+            <% if @tags %>
+	      <li>
+	        <!-- <h2>Lorem Ipsum</h2> -->
+	        <ul>
+                  <% @tags.each do |tag| %>
+                    <li><%= link_to h(tag.name), products_path(:tag => tag.name) %></li>
+                  <% end %>
+	        </ul>
+	      </li>
+            <% end %>
 	    <li>
 	      <h2>Volutpat Dolore</h2>
 	      <ul>
