--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
       <!-- end div#logo -->
       <div id="menu">
 	<ul>
-	  <li class="active"><a href="#">Home</a></li>
-	  <li><%= link_to "Products", products_path %></li>
+	  <li class="active"><%= link_to "Products", products_path %></li>
 	  <li><a href="#">About</a></li>
 	  <li><a href="#">Contact</a></li>
+	  <li><a href="blog.ecigs.md">Blog</a></li>
 	</ul>
         <div style="clear: both;"></div>
 
