--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -2,14 +2,14 @@
 <%= error_messages_for :product %>
 
 <div id="product-form">
-  <%= form_for @product do |f| %>
-    <label for="product_title">Title</label><br />
-    <%= f.text_field :title, :size => 60 %><br />
-    <label for="product_description">Description</label><br />
-    <%= f.text_area :description, :size => "80x20" %><br />
-    <label for="produce_price">Price</label><br />
-    <%= f.text_field :price %><br />
-    <label for="produce_quantity">Quantity</label><br />
-    <%= f.text_field :quantity %><br />
-  <% end %>
+  <label for="product_title">Title</label><br />
+  <%= f.text_field :title, :size => 60 %><br />
+  <label for="product_description">Description</label><br />
+  <%= f.text_area :description, :size => "80x20" %><br />
+  <label for="product_price">Price</label><br />
+  <%= f.text_field :price %><br />
+  <label for="product_quantity">Quantity</label><br />
+  <%= f.text_field :quantity %><br />
+  <label for="product_tag_list">Tags</label><br />
+  <%= f.text_field :tag_list %><br />
 </div>
