--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,6 @@
 <% title("Edit - #{h(@product.title)}") %>
 
-<%= render :partial => "form" %>
-<%= submit_tag "Update" %> <%= link_to "Cancel", @product %>
+<%= form_for @product do |f| %>
+  <%= render :partial => "form", :locals => {:f => f} %>
+  <%= submit_tag "Update" %> <%= link_to "Cancel", @product %>
+<% end %>
