--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 	  <li class="active"><%= link_to "Products", products_path %></li>
 	  <li><a href="#">About</a></li>
 	  <li><a href="#">Contact</a></li>
-	  <li><a href="blog.ecigs.md">Blog</a></li>
+	  <li><a href="http://blog.ecigs.md">Blog</a></li>
 	</ul>
         <div style="clear: both;"></div>
 
