--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -14,7 +14,7 @@
 	        <!-- <h2>Lorem Ipsum</h2> -->
 	        <ul>
                   <% @tags.each do |tag| %>
-                    <li><%= link_to h(tag.name), products_path(:tag => tag.name) %></li>
+                    <li><%= link_to h(tag.name) + " (#{tag.count})", products_path(:tag => tag.name) %></li>
                   <% end %>
 	        </ul>
 	      </li>
