--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,8 @@
 
 <div id="product-list">
   <% @products.each do |product| %>
-    <%= link_to h(product.title), product_path(product) %><br />
+    <p><%= link_to h(product.title), product_path(product) %><br />
+      <%= h(truncate(product.description)) %></p>
   <% end %>
 </div>
 
