--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,6 @@
 <% title("Add a new product") %>
 
-<%= form_for @product do |f| %>
+<%= form_for @product, :html => {:multipart => true} do |f| %>
   <%= render :partial => "form", :locals => {:f => f} %>
   <%= submit_tag "Add" %>
 <% end %>
