--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,7 @@
 <% title(h(@product.title)) %>
 
 <div id="product-page">
+  <div class="photo"><%= link_to image_tag(@product.photo.url(:large)), @product %></div>
   <p><%= h(@product.description) %></p>
 
   Price: <%= @product.price %><br />
