change products, order_lines scale to 2

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -41,6 +41,6 @@
   <% end %>
 
   <div id="cart-continue-order">
-    <%= link_to "Continue shopping", products_path %> or <%= link_to "Place an order" %>
+    <%= link_to "Place an order" %> or <%= link_to "Continue shopping", products_path %>
   </div>
 </div>
