--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 
         <div id="user-links">
           <%= link_to 'Cart', cart_path %>&nbsp;
+          <%= link_to 'Order history', orders_path %>&nbsp;
           <% if user_signed_in? %>
             Signed in as <%= current_user.email %>. Not you?
             <%= link_to "Sign out", destroy_user_session_path %>
