--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
           <% end %>
 
           <% if title = yield(:title) %>
-            <h2><%= title %></h2>
+            <h2 id="page-title"><%= title %></h2>
             <% end %>
 
           <%= yield %>
