--- a/app/views/orders/_order_lines.html.erb
+++ b/app/views/orders/_order_lines.html.erb
@@ -1,6 +1,6 @@
 <table width="100%">
   <tr>
-    <th width="5%">#</th>
+    <th width="2%">#</th>
     <th>Title</th>
     <th width="15%">Quantity</th>
     <th width="15%">Unit price</th>
@@ -25,7 +25,7 @@
   <% end %>
   <tr>
     <td colspan="3"></td>
-    <td>Delivery cost:</td>
+    <td>Delivery:</td>
     <td><%= @order.delivery_cost %></td>
   </tr>
   <tr>
