--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,4 @@
-<% title("##{@order.id} order") %>
+<% title("Order ##{@order.id}") %>
 
 <div id="cart-page">
   <%= render :partial => "order_lines" %>
