--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -19,6 +19,10 @@ body {
 	color: #202020;
 }
 
+input {
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+
 h1, h2, h3 {
 	color: #AA2808;
 }
@@ -34,7 +38,7 @@ h3 {
 
 p, blockquote, ul, ol {
 	/* margin-bottom: 0px; */
-	line-height: 2em;
+	line-height: 1.5em;
 }
 
 p {
@@ -47,6 +51,10 @@ ul, ol, li {
 	margin: 0px;
 	padding: 0px;
 	list-style: none;
+}
+
+img {
+  border: 0;
 }
 
 a {
@@ -150,6 +158,16 @@ th {
 #menu ul a:hover, #menu .active a {
 	background: #FFFFFF;
 	color: #110404;
+}
+
+/* buttons */
+
+/* input[type="button"], */ .button {
+  line-height: 35px;
+  height: 35px;
+  padding-left: 5px;
+  padding-right: 5px;
+
 }
 
 /* user-links */
@@ -337,6 +355,10 @@ th {
 	font-size: 85%;
 }
 
+#page-title {
+  margin-bottom: 10px;
+}
+
 /* Footer */
 
 #footer {
@@ -411,8 +433,17 @@ th {
 
 /* products/show */
 
-#product-page {
+#product-page .options {
   padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+#product-page .options .price {
+  font-weight: bold;
+}
+
+#product-page .order-lines .button {
+  margin-top: 10px;
 }
 
 /* cart/show */
@@ -427,4 +458,9 @@ th {
 #cart-continue-order {
   padding-top: 20px;
   font-size: 1.3em;
+}
+
+/* orders/new,show */
+#delivery-address h3 {
+  padding-bottom: 10px;
 }
