--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -46,7 +46,7 @@
         </table>
       <% end %>
 
-      <%= submit_tag "Add to Cart", :class => "button" %>
+      <%= submit_tag "Add to Cart", :class => "button cart-add" %>
     </div>
   <% end %>
 </div>
