--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,11 +1,16 @@
 <% title("Order ##{@order.id}") %>
 
 <div id="cart-page">
+  <ul>
+    <li>Date: <%= @order.created_at.short %></li>
+    <li>State: In Process</li>
+  </ul>
+  <br />
   <%= render :partial => "order_lines" %>
 
   <% if address = @order.order_address %>
     <div id="delivery-address">
-      <h2>Delivery address</h2>
+      <h3>Delivery address</h3>
       Street: <%= h(address.street) %><br />
       Phone number: <%= h(address.phone_number) %><br />
       <% if address.phone_number2.present? %>
