--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,15 +3,15 @@
 
 <div id="product-form">
   <label for="product_title">Title</label><br />
-  <%= f.text_field :title, :size => 60 %><br />
+  <%= f.text_field :title, :style => "width: 100%" %><br />
   <label for="product_description">Description</label><br />
-  <%= f.text_area :description, :size => "80x20" %><br />
-  <label for="product_price">Price</label><br />
-  <%= f.text_field :price %><br />
-  <label for="product_quantity">Quantity</label><br />
-  <%= f.text_field :quantity %><br />
+  <%= f.text_area :description, :size => "80x20", :style => "width: 100%" %><br />
   <label for="product_tag_list">Tags</label><br />
-  <%= f.text_field :tag_list %><br />
+  <%= f.text_field :tag_list, :style => "width: 100%" %><br />
+  <label for="product_price">Price</label><br />
+  <%= f.text_field :price, :size => 5 %><br />
+  <label for="product_quantity">Quantity</label><br />
+  <%= f.text_field :quantity, :size => 5 %><br />
   <label for="product_photo">Photo</label><br />
   <%= f.file_field :photo %>
 
