--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,5 +2,5 @@
 
 <%= form_for @product, :html => {:multipart => true} do |f| %>
   <%= render :partial => "form", :locals => {:f => f} %>
-  <%= submit_tag "Add" %>
+  <p><%= submit_tag "Add", :class => "button" %></p>
 <% end %>
