--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Ecigs - <%= yield(:title) || "your place to buy e-cigarettes" %></title>
+  <title>Ecigs - <%= content_for?(:title) ? yield(:title) : "wowow e-cigarettes" %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
@@ -40,20 +40,25 @@
     <!-- end div#header -->
     <div id="page">
       <div id="page-bgtop">
+        <% if content_for?(:sidebar) %>
+          <div id="sidebar">
+            <%= yield(:sidebar) %>
+          </div>
+        <% end %>
+	<!-- end div#sidebar -->
+
 	<div id="content">
           <% flash.each do |name, msg| %>
             <p class="<%= name %>"><%= h(msg) %></p>
           <% end %>
 
-          <% if title = yield(:title) %>
-            <h2 id="page-title"><%= title %></h2>
+          <% if content_for?(:title) %>
+            <h2 id="page-title"><%= yield(:title) %></h2>
             <% end %>
 
           <%= yield %>
 	</div>
 	<!-- end div#content -->
-        <%= render :partial => "layouts/sidebar" %>
-	<!-- end div#sidebar -->
         <div style="clear: both; height: 1px"></div>
       </div>
     </div>
