--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -187,10 +187,7 @@ th {
   padding-right: 10px;
 }
 
-#user-links a {
-    text-decoration: none;
-}
-/* icons: http://cssglobe.com/post/3949/interview-with-logo-designer-luka-pensa/ */
+/* icons: http://cssglobe.com/post/3949/interview-with-logo-designer-luka-pensa */
 #user-links a.cart {
   line-height: 30px;
   padding: 10px 5px 10px 31px;
@@ -240,23 +237,26 @@ th {
 /* Page */
 
 #page {
-	width: 892px;
-	margin: 0 auto;
-	background: url(/images/img03.jpg) repeat-y left top;
+  width: 892px;
+  margin: 0 auto;
+  background-color: #fff;
 }
 
 #page-bgtop {
-	background: url(/images/img05.jpg) no-repeat left top;
-	padding: 0px 30px;
+        background: url(/images/img05.jpg) no-repeat left top;
+	padding: 0px 20px;
 }
 
 /* Content */
 
 #content {
-	float: left;
-	width: 564px;
-	padding-top: 30px;
+  padding-top: 15px;
 }
+
+#sidebar + #content {
+  margin-left: 228px;
+}
+
 .post {
 	margin: 0px 0px 30px 0px;
 }
@@ -300,9 +300,9 @@ th {
 /* Sidebar */
 
 #sidebar {
-	float: right;
-	width: 208px;
-	padding-top: 30px;
+  float: left;
+  width: 208px;
+  padding-top: 15px;
 }
 
 #sidebar ul {
@@ -435,9 +435,8 @@ th {
 
 /* products/index */
 
-#product-list {
-  padding-bottom: 10px;
-  padding-top: 10x;
+#product-list .product {
+  padding-top: 10px;
 }
 
 #product-list .photo {
@@ -470,7 +469,6 @@ th {
 }
 
 #product-page .cart-add {
-  /* padding: 10px 5px 10px 31px; */
   padding-left: 31px;
   background: url(/images/icons/cart-add.jpg) left center no-repeat;
   line-height: 1em;
