--- a/app/views/layouts/products.html.erb
+++ b/app/views/layouts/products.html.erb
@@ -1,11 +1,13 @@
 <% content_for :sidebar do %>
-  <li>
-    <ul>
-      <% @tags.each do |tag| %>
-        <li <%= 'id=selected' if params[:tag] == tag.name %>><%= link_to h(tag.name) + " (#{tag.count})", products_path(:tag => tag.name) %></li>
-      <% end %>
-    </ul>
-  </li>
+  <ul>
+    <li>
+      <ul>
+        <% @tags.each do |tag| %>
+          <li <%= 'id="selected"'.html_safe if params[:tag] == tag.name %>><%= link_to h(tag.name) + " (#{tag.count})", products_path(:tag => tag.name) %></li>
+        <% end %>
+      </ul>
+    </li>
+  </ul>
 <% end %>
 
 <%= render :template => "layouts/application" %>
