--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,7 @@
       <!-- end div#logo -->
       <div id="menu">
 	<ul>
-	  <li class="active"><%= link_to "Products", products_path %></li>
-	  <li><a href="#">About</a></li>
-          <li><a href="http://blog.ecigs.md">Blog</a></li>
-	  <li><a href="#">Contacts</a></li>
+          <%= tabs %>
 	</ul>
         <div style="clear: both;"></div>
 
