--- a/app/views/orders/_order_lines.html.erb
+++ b/app/views/orders/_order_lines.html.erb
@@ -25,7 +25,7 @@
   <% end %>
   <tr>
     <td colspan="3"></td>
-    <td>Delivery:</td>
+    <td><%= link_to 'Delivery' %>:</td>
     <td><%= @order.delivery_cost %></td>
   </tr>
   <tr>
