--- a/app/views/carts/_order_lines_form.html.erb
+++ b/app/views/carts/_order_lines_form.html.erb
@@ -33,7 +33,7 @@
     <% end %>
     <tr>
       <td colspan="3"></td>
-      <td><%= link_to 'Delivery' %>:</td>
+      <td>Delivery (<%= link_to '?', delivery_home_path %>):</td>
       <td><%= @cart.delivery_cost %></td>
     </tr>
     <tr>
